--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
   "name": "build-dependency-graph",
   "version": "0.1.2",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "build/lib.js",
+  "types": "build/lib.d.ts",
+  "bin": "build/main.js",
   "license": "MIT",
+  "files": [
+    "build/lib.js",
+    "build/main.js"
+  ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && chmod +x ./build/main.js",
+    "test": "jest"
   },
   "dependencies": {
-    "glob": "^7.1.4",
-    "jest-config": "^24.8.0",
-    "jest-resolve-dependencies": "^24.8.0",
-    "jest-runtime": "^24.8.0"
+    "glob": "^8.0.3",
+    "jest-config": "^29.3.1",
+    "jest-resolve-dependencies": "^29.3.1",
+    "jest-runtime": "^29.3.1"
   },
   "devDependencies": {
     "@tsconfig/node18-strictest": "^1.0.0",
-    "@types/glob": "^7.0.0",
+    "@types/glob": "^8.0.0",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.15",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
+  },
+  "engines": {
+    "node": ">= 18"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "__resources__"
+    ]
   }
 }
