--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "@tsconfig/node18-strictest/tsconfig.json",
+  "extends": "@tsconfig/node18-strictest",
   "include": [
     "src"
   ],
   "compilerOptions": {
-    "outDir": "build",
-    "declaration": true
+    "outDir": "build"
   }
 }
